--- a/index.html
+++ b/index.html
@@ -3,8 +3,289 @@
   <head>
     <meta charset="utf-8">
     <title>模写コーディング</title>
+    <link rel="icon" type="image/png"href="images/favicon.png">
+    <!-- CSS -->
+    <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
+    <link rel="stylesheet" href="index.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div id="home" class="mainvisual">
+      <header class="mainvisual__header">
+        <a href="index.html"><img class="logo" src="images/logo.png" alt="PAS-POL ホーム"</a>
+        <nav>
+          <ul class="mainvisual__header-menu">
+            <li><a href="index.html">TOP</a></li>
+            <li><a href="prpduct.html">PRODUCT</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="news.html">NEWS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div><!-- #home -->
+    <!-- Concept -->
+    <section class="mainpage mainpage__concept">
+      <div class="consept">
+        <h1 class="consept-title">旅に出よう。</h1>
+        <div class="consept-read">
+          <p>
+            僕たちが作りたいのは
+            <br>
+            持っているだけで旅に出たくなるモノ。
+            <br>
+            持っているだけでわくわくするモノ。
+            <br>
+          </p>
+          <p>
+            それは新しい時代の"パスポート"
+            <br>
+            僕たちが作るものは、
+            <br>
+            そんな、存在でありたい。
+          </p>
+          <p>
+            そして、人と人が繋がる
+            <br>
+            こんな時代だからこそ、
+            <br>
+            僕たちは、みんなでひとつのモノを
+            <br>
+            作ることを追求したい。
+          </p>
+          <img class="concept-siteLOGO" src="images/PAS-POL.jpg"></img>
+          <p>
+            それは、自分と世界を繋げる
+            <br>
+            旅のモノづくりブランド
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="mainpage mainpage__product">
+      <div class="product">
+        <div class="productTitle">
+          <h1 class="productTitle__text">PRODUCT</h1>
+        </div>
+        <div class="sectionTitle__button">
+          <a href="#" class="sectionTitle__button-more">MORE</a>
+        </div>
+      </div>
+      <div class="productList">
+        <article class="productList__item">
+          <a class="productList__item-link" href="#">
+            <div class="productList__item-image">
+              <img src="images/m-productList1.jpg">
+            </div>
+            <h2 class="m-productList-item-title">The World<br>Festival Guide -<br>海外の音楽フェス完<br>全ガイド-</h2>
+            <p class="m-productList-item-description"></p>
+          </a>
+        </article>
+        <article class="productList__item">
+          <a class="productList__item-link" href="#">
+            <div class="productList__item-image">
+              <img src="images/m-productList2.jpg">
+            </div>
+            <h2 class="m-productList-item-title">この世界で死ぬまでに<br>したいこと2000</h2>
+            <p class="m-productList-item-description"></p>
+          </a>
+        </article>
+        <article class="productList__item">
+          <a class="productList__item-link" href="#">
+            <div class="productList__item-image">
+              <img src="images/m-productList3.jpg" >
+            </div>
+            <h2 class="m-productList-item-title">365日日本一周 絶景<br>日めくりカレンダー</h2>
+            <p class="m-productList-item-description"></p>
+          </a>
+        </article>
+        <article class="productList__item">
+          <a class="productList__item-link" href="#">
+            <div class="productList__item-image">
+              <img src="images/m-productList4.jpg">
+            </div>
+            <h2 class="m-productList-item-title">PASSPORT<br>NOTEBOOK<br>series</h2>
+            <p class="m-productList-item-description"></p>
+          </a>
+        </article>
+        <article class="productList__item">
+          <a class="productList__item-link" href="#">
+            <div class="productList__item-image">
+              <img src="images/m-productList5.jpg">
+            </div>
+            <h2 class="m-productList-item-title">ひとり旅英会話<br>BOOK</h2>
+            <p class="m-productList-item-description"></p>
+          </a>
+        </article>
+        <article class="productList__item">
+          <a class="productList__item-link" href="#">
+            <div class="productList__item-image">
+              <img src="images/m-productList6.jpg">
+            </div>
+            <h2 class="m-productList-item-title">日本の絶景ポストカード　春編</h2>
+            <p class="m-productList-item-description"></p>
+          </a>
+        </article>
+      </div>
+    </section>
+    <!-- News -->
+    <section class="mainpage mainpage__news">
+      <div class="news">
+        <div class="newsTitle">
+          <h1 class="newsTitle__text">NEWS</h1>
+        </div>
+        <div class="sectionTitle__button">
+          <a href="#" class="sectionTitle__button-more">MORE</a>
+        </div>
+      </div>
+      <div class="newsList">
+        <article class="newsList__item">
+          <a href="#" class="newsList__item-link">
+            <div class="newsList__item-image">
+              <img src="images/m-newsList1.jpg" alt>
+            </div>
+            <div class="newsList__item-text">
+              <h2 class="newsList__item-title">新書籍「僕が旅人になった日」のアンケートにご協力ください！</h2>
+              <p class="newsList__item-date">
+                <time pubdate="2019-09-15">2019.9.15</time>
+              </p>
+              <p class="newsList__item-description">
+                "いつの間にか夜は肌寒くなってきて、もう夏も終わったんだな〜と実感しております。こんにちは、TABIPPOのROY(roy_world81)です。
+                7月まで「＃旅とわたし」というテーマでみなさまの旅のエッセイを募集していました。(詳しくはこちら)約4,300件の応募の中から掲載者が確定し、
+                順調に書籍の制作に向けて動いております。ご投稿していただいたみなさま、改めてありがとうございます。そんな旅人みんなで作る書籍「僕が旅人になった日」
+                はエッセイだけではなく、未来の旅人が旅に出たくなるようなコンテ..."
+              </p>
+            </div>
+          </a>
+        </article>
+        <article class="newsList__item">
+          <a href="#" class="newsList__item-link">
+            <div class="newsList__item-image">
+              <img src="images/m-newsList2.jpg" alt>
+            </div>
+            <div class="newsList__item-text">
+              <h2 class="newsList__item-title">新書籍「旅人になった日」に掲載される絶景の写真を大募集！</h2>
+              <p class="newsList__item-date">
+                <time pubdate="2019-08-02">2019.8.2</time>
+              </p>
+              <p class="newsList__item-description">
+                "長い梅雨もようやく明け、いよいよ夏の訪れを感じています。こんにちは、TABIPPOのロイ（roy_world81）です。先日まで「＃旅人わたし」という
+                テーマでみなさまの旅のエッセイを募集していました。（詳しくはこちら）約4,300件とたくさんの投稿があり、全て読ませていただきました。
+                派手な出来事で人生が変わった方もいましたし、日常の些細な気付きで考えが変わった、日々の大切に気づいた方もいました。中にはTABIPPO
+                の本を見て人生が変わったという方もいらっしゃり、いろんな想いでみなさまのnot..."
+              </p>
+            </div>
+          </a>
+        </article>
+        <article class="newsList__item">
+          <a href="#" class="newsList__item-link">
+            <div class="newsList__item-image">
+              <img src="images/m-newsList3.jpg" alt>
+            </div>
+            <div class="newsList__item-text">
+              <h2 class="newsList__item-title">noteコラボ企画のお題「＃旅とわたし」の投稿が3000件突破!!</h2>
+              <p class="newsList__item-date">
+                <time pubdate="2019-07-06">2019.7.6</time>
+              </p>
+              <p class="newsList__item-description">
+                "noteとコラボして制作をしている旅のエッセイ本「僕が旅人になった日」。たくさんのご応募があり、3000件を突破しました!とっても好評のため
+                募集期間が7/12(金)に延長されたので、まだまだ募集をしています。この中から、もっと多くの人に読んでほしい!と思ったエッセイを本にします。みなさんのエッセイを
+                読んでいると、旅の形って本当に様々だなあというのを思わせてくれます。素敵な文章があふれる中、私がいいなと思ったエッセイをご紹介します。おすすめの
+                「＃旅とわたし」旅って新しいことの発見だけでは..."
+              </p>
+            </div>
+          </a>
+        </article>
+        <article class="newsList__item">
+          <a href="#" class="newsList__item-link">
+            <div class="newsList__item-image">
+              <img src="images/m-newsList4.jpg" alt>
+            </div>
+            <div class="newsList__item-text">
+              <h2 class="newsList__item-title">noteコラボ企画のお題「＃旅とわたし」の募集期間を7/12(金)に延長にます！</h2>
+              <p class="newsList__item-date">
+                <time pubdate="2019-06-24">2019.6.24</time>
+              </p>
+              <p class="newsList__item-description">
+                "noteとコラボして制作をしている旅のエッセイ本「僕が旅人になった日」。現在みなさまからエッセイの募集をしています。素敵な文章は2月に発売予定の本書籍に
+                掲載されます。そんなnoteとのコラボ企画ですが、大好評につきエッセイ募集期間を7/12(金)に延長しました!期間延長の背景 6月のはじめから開始されたこの
+                企画ですが、瞬く間に500件の投稿数を超え、その後も1,000、2,000と投稿数が増えていきました。おかげさまでnoteでのハッシュタグの数は6/24
+                現在2400件を突破しました!たく..."
+              </p>
+            </div>
+          </a>
+        </article>
+        <article class="newsList__item">
+          <a href="#" class="newsList__item-link">
+            <div class="newsList__item-image">
+              <img src="images/m-newsList5.jpg" alt>
+            </div>
+            <div class="newsList__item-text">
+              <h2 class="newsList__item-title">noteコラボ企画「＃旅とわたし」の投稿が2000件突破！！</h2>
+              <p class="newsList__item-date">
+                <time pubdate="2019-06-21">2019.6.21</time>
+              </p>
+              <p class="newsList__item-description">
+                "noteとコラボして制作をしている旅のエッセイ本。「＃旅とわたし」のハッシュタグをつけて投稿していただいてるのですが、なんと2000投稿を
+                突破しました!!!やく1週間で1000投票も増えていて、感激です!そして全て読ませていただいてます!!＃旅とわたしのテーマがあるから、旅について書いてみようと
+                振り返って文章にしてくれる人たちもたくさんいました。自分の旅を改てどうだったかなと考え直すことはあまりないと思います。旅中の出来事を思い出して嬉しくなったり
+                、あの時どう思ってたなぁと自分のことを知れた..."
+              </p>
+            </div>
+          </a>
+        </article>
+      </div>
+    </section>
+    <!-- Share -->
+    <div class="share">
+      <div class="backTop">backTop</div>
+        <a href="#"></a>
+      <div class="shareButtons__item shareButtons__item-facebook">
+        <a href="#"class="mainbutton__facebook" target="_blank" onclick="ga('send','event','share_facebook','click');">Share on Facebook</a>
+      </div>
+      <div class="shareButtons__item shareButtons__item-twitter">
+        <a href="#"class="mainbutton__twitter" target="_blank" onclick="ga('send','event','share_twitter','click');">Share on Twitter</a>
+      </div>
+      <div class="shareButtons__item shareButtons__item-hatena">
+        <a href="#"class="mainbutton__hatena" target="_blank" onclick="ga('send','event','share_hatena','click');">Hatena Bookmark</a>
+      </div>
+    </div>
+    <!-- Footer Nav-->
+    <footer class="footerNav">
+      <nav class="mainnavigation">
+        <ul>
+          <li>
+            <a href="#">TOP</a>
+          </li>
+          <li>
+            <a href="#">PRODUCT</a>
+          </li>
+          <li>
+            <a href="#">ABOUT</a>
+          </li>
+          <li>
+            <a href="#">NEWS</a>
+          </li>
+          <li>
+            <a href="#">CONTACT</a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="mainvisual__footer">
+        <h1 class="siteLogo">
+          <a href="#">
+            <img class="footerLogo" src="images/footerlogo.png" alt="">
+          </a>
+        </h1>
+        <div class="copyRight">
+          <small>copyright ©︎2019 PAS-POL -旅のモノづくりブランド-｜TABIPPO ALL rights reserved.</small>
+        </div>
+      </div>
+    </footer>
+    <link rel="stylesheet" id="metaslider-flex-slider-css" href="/css/master.css">
   </body>
 </html>
