--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png"href="images/favicon.png">
     <!-- CSS -->
     <link rel="stylesheet" href="http://unpkg.com/ress/dist/ress.min.css">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="css/contact.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   </head>
@@ -93,6 +93,5 @@
         </div>
       </div>
     </footer>
-    <link rel="stylesheet" id="metaslider-flex-slider-css" href="/css/master.css">
   </body>
 </html>
